Update tooltips and labels for mnemonic and public key fields

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -82,8 +82,8 @@
 	"tooltipAdminUser": "Admin user can manage blockchain accounts and users. All users can manage (their own questionnaires)",
 	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire. Can be any text combination.",
 	"tooltipBlockchainAccount": "Blockchain accounts can only be created by admins and contain the login data to an existing blockchain wallet. This is were questionnaire data will be saved to.",
-	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
-	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
+	"tooltipMnemonic": "Needed to create memo transactions. The seed phrase will not be saved. Instead the according private and public key will be generated and saved in the database.",
+	"tooltipBlockchainPublicKey": "The public key of your wallet under which all transactions (/study data) are saved.",
 	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
 	"tooltipConnectAppHelp": "Get information on how to connect other apps to SciDataSeal so that can automatically save data to the blockchain.",
 	"tooltipCreateQuestionnaire": "Automatically create a questionnaire inside this study.",
