Add response data to ConnectAppHelp page

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -71,6 +71,7 @@
 	"questionnaireName": "Questionnaire name",
 	"questionnaires": "Questionnaires",
 	"reload": "Reload",
+	"response": "Response",
 	"saveData": "Save data",
 	"save": "Save",
 	"selectQuestionnaire": "Select questionnaire",
@@ -92,9 +93,14 @@
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain. Can be any text combination.",
 	"tooltipDeleteEntry": "Delete this entry.",
 	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so SciDataSeal knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
+	"tooltipErrorCode": "An error code that describes the error that happened.",
 	"tooltipStringDenotation": "The string representation of the denotation as it will be saved in the blockchain.",
 	"tooltipQuestionnaires": "Questionnaires are connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
+	"tooltipQuestionnaireId": "The id of the new questionnaire.",
+	"tooltipQuestionnaireName": "The name of the new questionnaire.",
 	"tooltipReload": "Reload data from the blockchain and replace the local cache.",
+	"tooltipResponseOk": "True, when successful. False if an error happened.",
+	"tooltipResponseError": "Is only defined when an error happened. and ok is false.",
 	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
 	"tooltipSaveData": "Save questionnaire data into the blockchain.",
 	"tooltipSetColumns": "Set columns for your data (the column definition will also be saved in the blockchain. Only entries that belong to a preset column will be saved. Other data will be ignored.",
